add : verify nunjunks , try vuepress blog engine ; init : esbuild and algorithm and db-xx topic

--- a/web-template-nunjucks/views/main.njk
+++ b/web-template-nunjucks/views/main.njk
@@ -1,10 +1,3 @@
-<html>
-    <head>
-        <title><$ title|shorten $></title>
-    </head>
-    <body>
-        {%- if body.display !== false -%}
-            <$ body.toString()|shorten(10) $>
-        {%- endif -%}
-    </body>
-</html>
+{% extends "./container.njk" %}
+
+
